# skill-installer

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  ROADMAP.md  pyproject.toml
.agents/analysis/: 001-test-regression-ci-investigation.md  FINDINGS_SUMMARY.md
.agents/critique/: 001-marketplace-agents-commands-critique.md
.agents/planning/: remediation-codeql-plan.md
.agents/qa/: issue-6-marketplace-discovery-coverage-report.md
.codeql/: README.md
.codeql/scripts/: run-codeql.sh
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/codeql/extensions/skill-installer-python/: codeql-pack.yml
.github/workflows/: bandit.yml  ci.yml  codeql.yml  devskim.yml  release.yml
.serena/: project.yml
.serena/memories/: test-coverage-analysis-issue-6.md
docs/TUI/: DATATABLE-PLAN-QUICK-REFERENCE.md  DATATABLE-PLAN.md  DESIGN-REMEDIATION.md  LOCATION_SELECTION_IMPLEMENTATION.md  TUI-COMPLETION-PLAN.md  validate-tui-features.md
src/skill_installer/: __init__.py  __main__.py  cli.py  context.py  discovery.py  filesystem.py  gitops.py  install.py  protocols.py  registry.py  transform.py  tui.py  types.py  validation.py
src/skill_installer/tui/: __init__.py  _utils.py  app.py  console.py  data_manager.py  handlers.py  models.py  operations.py  styles.py
src/skill_installer/tui/panes/: __init__.py  discover.py  installed.py  marketplaces.py
src/skill_installer/tui/screens/: __init__.py  add_source.py  confirmation.py  installed_item_detail.py  item_detail.py  source_detail.py  (+1 more)
tests/: __init__.py  conftest.py  debug_browse.py  test_cli.py  test_context.py  test_discovery.py  test_filesystem.py  test_gitops.py  test_install.py  test_platforms.py  test_registry.py  test_transform.py  test_tui.py  test_validation.py
tests/scripts/: AGENTS.md  MANUAL_TESTING.md  README.md  datatable_spike.py  debug_tabs.sh  profile_tui_detailed.py  profile_tui_interactive.sh  profile_tui_startup.py  test_add_source.sh  test_batch_install.sh  test_detail_view.sh  test_discover_tab.sh  test_location_selection.sh  test_navigation.sh  test_tui.sh  test_tui_final.sh  test_tui_simple.sh
(+6 files in other folders)
