[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-installer"
version = "0.1.0"
description = "Universal skill/agent installer for AI coding platforms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Richard Murillo", email = "rjmurillo@users.noreply.github.com" }
]
keywords = [
    "ai",
    "agents",
    "skills",
    "claude",
    "vscode",
    "copilot",
    "installer"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed"
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
skill-installer = "skill_installer.cli:app"

[project.urls]
Homepage = "https://github.com/rjmurillo/skill-installer"
Repository = "https://github.com/rjmurillo/skill-installer"
Issues = "https://github.com/rjmurillo/skill-installer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_installer"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=skill_installer --cov-report=term-missing"

[tool.coverage.run]
source = ["src/skill_installer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
